--- a/First Project/index.html
+++ b/First Project/index.html
@@ -25,7 +25,7 @@
             </footer>
         </div>
 
-        <script src="js/source/Ellipse.js"></script>
+        <script src="js/source/ellipse.js"></script>
         <script src="js/canvas.js"></script>
         <script src="js/sketch.js"></script>
     </body>
