Styled the website some more.
Changed the CSS layouts a little bit and made it more uniform.
Added a link back to home from the first project.

--- a/First Project/index.html
+++ b/First Project/index.html
@@ -4,6 +4,7 @@
         <title>First P5 Project</title>
 
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="../css/main.css" />
         <link rel="stylesheet" type="text/css" href="css/main.css" />
         
         <script src="../vendor/p5.dom.js"></script>
@@ -15,6 +16,11 @@
                 <h1>My First P5.js Project</h1>
                 <p>This project is just to test some of P5.js' capabilities. </p>
             </header>
+            <nav>
+                <div class="navbar show-navbar">
+                    <a href="../index.html">Home</a>
+                </div>
+            </nav>
             <main>
                 <div id="sketch">
 
