Fixed some warnings in the HTML.
The W3 Validator complained about some things so I fixed them.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <title>Homepage for Avekvist's p5.js projects</title>
 
@@ -15,14 +15,14 @@
             </header>
             <nav>
                 <div class="navbar">
-                    <a href="First Project/index.html">First Project</a>
+                    <a href="First%20Project/index.html">First Project</a>
                 </div>
                 <div class="handle">Main</div>
             </nav>
             <main>
                 <h3>Hello, my name is Hampus Avekvist</h3>
                 <div class="image-container">
-                    <img id="hampus-image" src="media/images/hampus.png"/>
+                    <img id="hampus-image" src="media/images/hampus.png" alt="An image of me"/>
                     <p><i>Yeah, that's me</i></p>
                 </div>
                 <p>
@@ -50,7 +50,7 @@
             </footer>
         </div>
         
-        <script type="text/javascript">
+        <script>
             $('.handle').on('click', function() {
                 $('.navbar').toggleClass("show-navbar");
             });
