Started working on a graphical calculator

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <nav>
                 <div class="navbar">
                     <a href="First%20Project/index.html">First Project</a>
+                    <a href="Calculator/index.html">Calculator</a>
                 </div>
                 <div class="handle">Main</div>
             </nav>
