--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>First p5.js Project</title>
+        <title>Calculator made in p5.js</title>
 
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
@@ -9,12 +9,13 @@
         
         <script src="../vendor/p5.min.js"></script>
         <script src="../vendor/canvas.js"></script>
+        <script src="../vendor/colour.js"></script>
     </head>
     <body>
         <div class="container">
             <header>
-                <h1>My First p5.js Project</h1>
-                <p>This project is just to test some of p5.js' capabilities. </p>
+                <h1>Graphical Calculator</h1>
+                <p>A simple, graphical, p5.js calculator </p>
             </header>
             <nav>
                 <div class="navbar show-navbar">
@@ -31,7 +32,8 @@
             </footer>
         </div>
 
-        <script src="js/source/ellipse.js"></script>
+        <script src="js/source/button.js"></script>
+        <script src="js/source/numberDisplay.js"></script>
         <script src="js/sketch.js"></script>
     </body>
 </html>
