Uploading a functional version of the calculator
More features might arrive at a later date, but for now this is a simple calculator that will remain this way. It's a bit hard to use, but it was just a little play project so it wasn't supposed to be the best-looking, highest functioning calculator.

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
+
         <title>Calculator made in p5.js</title>
 
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -14,7 +16,7 @@
     <body>
         <div class="container">
             <header>
-                <h1>Graphical Calculator</h1>
+                <h1>Calculator</h1>
                 <p>A simple, graphical, p5.js calculator </p>
             </header>
             <nav>
