Constructed Conway's Game of Life
Made Conway's Game of Life in p5.js.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div class="navbar">
                     <a href="First%20Project/index.html">First Project</a>
                     <a href="Calculator/index.html">Calculator</a>
+                    <a href="Conways%20Game%20of%20Life/index.html">Conway's Game of Life</a>
                 </div>
                 <div class="handle">Main</div>
             </nav>
@@ -28,29 +29,29 @@
                 </div>
                 <p>
                     <br>
-                    You might know me from Landon, my game on Steam, or maybe you know me from my game 
-                    engine live streaming on Twitch, or my other GitHub repository where I am making a 
-                    game engine in Rust using the Vulkan API. 
-                    I'm also doing videos on YouTube. 
+                    You might know me from Landon, my game on Steam, or maybe you know me from my game
+                    engine live streaming on Twitch, or my other GitHub repository where I am making a
+                    game engine in Rust using the Vulkan API.
+                    I'm also making YouTube videos.
                     <br><br>
                     If you don't know of me from anything, then let me introduce myself.
                     I'm a 17-year old guy from Sweden and I enjoy programming different things.
                     I'm currently in the second year of high school and I have a few courses where
                     I can work on different things, code related. Most of the things I'm making there
-                    will probably get posted on my GitHub or something. 
+                    will probably get posted on my GitHub or something.
                 </p>
 
                 <p>
-                    This repository, along this page, is just for showcasing some p5.js projects that I'm 
-                    working on. It will probably be machine learning, for the most part, but it could be 
-                    a lot of other things as well if my mind is along certain tracks. 
+                    This repository, along this page, is just for showcasing some p5.js projects that I'm
+                    working on. It will probably be machine learning, for the most part, but it could be
+                    a lot of other things as well if my mind is along certain tracks.
                 </p>
             </main>
             <footer>
                 <p>&copy;2018 Hampus Avekvist. <br>All rights reserved. </p>
             </footer>
         </div>
-        
+
         <script>
             $('.handle').on('click', function() {
                 $('.navbar').toggleClass("show-navbar");
