Started working on Sudoku

--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 
-        <title>Conway's Game of Life</title>
+        <title>Sudoku</title>
 
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
@@ -12,12 +12,11 @@
         <script src="../vendor/p5.min.js"></script>
         <script src="../vendor/canvas.js"></script>
     </head>
-
     <body>
         <div class="container">
             <header>
-                <h1>Conway's Game of Life</h1>
-                <p>Based on the rules stated <a href="http://www.conwaylife.com/w/index.php?title=Conway%27s_Game_of_Life">here</a></p>
+                <h1>Sudoku</h1>
+                <p>Just simple sudoku...</p>
             </header>
             <nav>
                 <div class="navbar show-navbar">
@@ -34,7 +33,6 @@
             </footer>
         </div>
 
-        <script src="js/source/button.js"></script>
         <script src="js/sketch.js"></script>
     </body>
 </html>
