--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <a href="First%20Project/index.html">First Project</a>
                     <a href="Calculator/index.html">Calculator</a>
                     <a href="Conways%20Game%20of%20Life/index.html">Conway's Game of Life</a>
+                    <a href="Sudoku/index.html">Sudoku</a>
                 </div>
                 <div class="handle">Main</div>
             </nav>
