Fixed some things and added new things
Fixed a disturbing thing with the calculator.
Started doing random sudoku generation.
Added the template for chess.
Added the template for Moonway Dale.

--- a/Chess/index.html
+++ b/Chess/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 
-        <title>Sudoku</title>
+        <title>Chess</title>
 
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
@@ -12,11 +12,12 @@
         <script src="../vendor/p5.min.js"></script>
         <script src="../vendor/canvas.js"></script>
     </head>
+
     <body>
         <div class="container">
             <header>
-                <h1>Sudoku</h1>
-                <p>Just simple sudoku...</p>
+                <h1>Chess</h1>
+                <p>Just chess</a></p>
             </header>
             <nav>
                 <div class="navbar show-navbar">
@@ -33,7 +34,6 @@
             </footer>
         </div>
 
-        <script src="js/source/cell.js"></script>
         <script src="js/sketch.js"></script>
     </body>
 </html>
