--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <a href="Calculator/index.html">Calculator</a>
                     <a href="Conways%20Game%20of%20Life/index.html">Conway's Game of Life</a>
                     <a href="Sudoku/index.html">Sudoku</a>
+                    <a href="Chess/index.html">Chess</a>
+                    <a href="Moonway%20Dale/index.html">Moonway Dale</a>
                 </div>
                 <div class="handle">Main</div>
             </nav>
