--- a/Moonway Dale/index.html
+++ b/Moonway Dale/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
 
-        <title>Sudoku</title>
+        <title>Moonway Dale</title>
 
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
@@ -15,8 +15,8 @@
     <body>
         <div class="container">
             <header>
-                <h1>Sudoku</h1>
-                <p>Just simple sudoku...</p>
+                <h1>Moonway Dale</h1>
+                <p>A little (to be a) Stardew Valley clone</p>
             </header>
             <nav>
                 <div class="navbar show-navbar">
@@ -33,7 +33,6 @@
             </footer>
         </div>
 
-        <script src="js/source/cell.js"></script>
         <script src="js/sketch.js"></script>
     </body>
 </html>
