--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <a href="Sudoku/index.html">Sudoku</a>
                     <a href="Chess/index.html">Chess</a>
                     <a href="Moonway%20Dale/index.html">Moonway Dale</a>
+                    <a href="ChessML/index.html">Chess ML</a>
                 </div>
                 <div class="handle">Main</div>
             </nav>
